fix: overflowing grid size bug

--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(16, auto); 
-    width: 400px;
-    height: 400px;
-    max-width: 90vw;
-    max-height: 90vw;
+    min-width: 400px;
+    min-height: 400px;
+    max-width: 100%;
+    max-height: 100%;
     margin: 0 auto;
   }
   
